// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckoutImageUpload handleChangeImage when the user upload files displays a loading indicator component when the image is being uploaded 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "errors": "#c0ffee",
        "primary": "#BADA55",
        "secondaryText": "#FFFFFF",
      },
      "typography": Object {
        "fontSize": Object {
          "smaller": "14px",
        },
      },
    }
  }
>
  <CheckoutImageUpload
    imageURL=""
    inputId="CheckoutImageUpload"
    label="1000x400px recommended"
    name="optimizedCheckout-logo"
    onChange={[MockFunction]}
  >
    <styled.div>
      <div
        className="sc-htpNat dvhMcy"
      >
        <styled.div>
          <div
            className="sc-bxivhb jYmzWA"
          >
            <styled.label
              htmlFor="CheckoutImageUpload"
            >
              <label
                className="sc-bdVaJa gNYMKB"
                htmlFor="CheckoutImageUpload"
              >
                Upload image
              </label>
            </styled.label>
            <styled.span>
              <span
                className="sc-gzVnrw ilxeHL"
              >
                1000x400px recommended
              </span>
            </styled.span>
            <input
              id="CheckoutImageUpload"
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                }
              }
              type="file"
              value=""
            />
          </div>
        </styled.div>
        <styled.div>
          <div
            className="sc-ifAKCX bmKgXx"
          >
            <Component>
              <div>
                Loading...
              </div>
            </Component>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </CheckoutImageUpload>
</ThemeProvider>
`;

exports[`CheckoutImageUpload handleChangeImage when the user upload files when we get an api error displays an error message and updates internal error state 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "errors": "#c0ffee",
        "primary": "#BADA55",
        "secondaryText": "#FFFFFF",
      },
      "typography": Object {
        "fontSize": Object {
          "smaller": "14px",
        },
      },
    }
  }
>
  <CheckoutImageUpload
    imageURL=""
    inputId="CheckoutImageUpload"
    label="1000x400px recommended"
    name="optimizedCheckout-logo"
    onChange={[MockFunction]}
  >
    <styled.div>
      <div
        className="sc-htpNat dvhMcy"
      >
        <styled.div>
          <div
            className="sc-bxivhb jYmzWA"
          >
            <styled.label
              htmlFor="CheckoutImageUpload"
            >
              <label
                className="sc-bdVaJa gNYMKB"
                htmlFor="CheckoutImageUpload"
              >
                Upload image
              </label>
            </styled.label>
            <styled.span>
              <span
                className="sc-gzVnrw ilxeHL"
              >
                1000x400px recommended
              </span>
            </styled.span>
            <input
              id="CheckoutImageUpload"
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                }
              }
              type="file"
              value=""
            />
          </div>
        </styled.div>
        <styled.p>
          <p
            className="sc-EHOje bBGYrN"
          >
            There was an error uploading your image, please try again.
          </p>
        </styled.p>
        <styled.div>
          <div
            className="sc-ifAKCX bmKgXx"
          />
        </styled.div>
      </div>
    </styled.div>
  </CheckoutImageUpload>
</ThemeProvider>
`;

exports[`CheckoutImageUpload handleRemoveImage when the user clicks the remove button it clears the image state and broadcasts a change event 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "errors": "#c0ffee",
        "primary": "#BADA55",
        "secondaryText": "#FFFFFF",
      },
      "typography": Object {
        "fontSize": Object {
          "smaller": "14px",
        },
      },
    }
  }
>
  <CheckoutImageUpload
    imageURL=""
    inputId="CheckoutImageUpload"
    label="1000x400px recommended"
    name="optimizedCheckout-logo"
    onChange={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "setting": Object {
                "force_reload": true,
                "id": "optimizedCheckout-logo",
                "type": "optimizedCheckout-image",
              },
              "value": "",
            },
          ],
        ],
      }
    }
  >
    <styled.div>
      <div
        className="sc-htpNat dvhMcy"
      >
        <styled.div>
          <div
            className="sc-bxivhb jYmzWA"
          >
            <styled.label
              htmlFor="CheckoutImageUpload"
            >
              <label
                className="sc-bdVaJa gNYMKB"
                htmlFor="CheckoutImageUpload"
              >
                Upload image
              </label>
            </styled.label>
            <styled.span>
              <span
                className="sc-gzVnrw ilxeHL"
              >
                1000x400px recommended
              </span>
            </styled.span>
            <input
              id="CheckoutImageUpload"
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                }
              }
              type="file"
              value=""
            />
          </div>
        </styled.div>
        <styled.div>
          <div
            className="sc-ifAKCX bmKgXx"
          />
        </styled.div>
      </div>
    </styled.div>
  </CheckoutImageUpload>
</ThemeProvider>
`;

exports[`CheckoutImageUpload handleRemoveImage when we have a previously set image there is a link to remove it 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "errors": "#c0ffee",
        "primary": "#BADA55",
        "secondaryText": "#FFFFFF",
      },
      "typography": Object {
        "fontSize": Object {
          "smaller": "14px",
        },
      },
    }
  }
>
  <CheckoutImageUpload
    imageURL=""
    inputId="CheckoutImageUpload"
    label="1000x400px recommended"
    name="optimizedCheckout-logo"
    onChange={[MockFunction]}
  >
    <styled.div>
      <div
        className="sc-htpNat dvhMcy"
      >
        <styled.div>
          <div
            className="sc-bxivhb jYmzWA"
          >
            <styled.label
              htmlFor="CheckoutImageUpload"
            >
              <label
                className="sc-bdVaJa gNYMKB"
                htmlFor="CheckoutImageUpload"
              >
                Upload image
              </label>
            </styled.label>
            <styled.span>
              <span
                className="sc-gzVnrw ilxeHL"
              >
                1000x400px recommended
              </span>
            </styled.span>
            <input
              id="CheckoutImageUpload"
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                }
              }
              type="file"
              value=""
            />
          </div>
        </styled.div>
        <styled.div>
          <div
            className="sc-ifAKCX bmKgXx"
          >
            <div>
              <styled.img
                src="https://placekitten.com/200/300"
              >
                <img
                  className="sc-bwzfXH hbwdff"
                  src="https://placekitten.com/200/300"
                />
              </styled.img>
              <div>
                <styled.a
                  onClick={[Function]}
                >
                  <a
                    className="sc-bZQynM jeCCcx"
                    onClick={[Function]}
                  >
                    Remove image
                  </a>
                </styled.a>
              </div>
            </div>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </CheckoutImageUpload>
</ThemeProvider>
`;

exports[`CheckoutImageUpload renders 1`] = `
<styled.div>
  <styled.div>
    <styled.label
      htmlFor="CheckoutImageUpload"
    >
      Upload image
    </styled.label>
    <styled.span>
      1000x400px recommended
    </styled.span>
    <input
      id="CheckoutImageUpload"
      onChange={[Function]}
      style={
        Object {
          "display": "none",
        }
      }
      type="file"
      value=""
    />
  </styled.div>
  <styled.div />
</styled.div>
`;
